[gd_scene load_steps=7 format=3 uid="uid://bhoptqw07hp3j"]

[ext_resource type="Script" uid="uid://bgopbu03fqb31" path="res://Scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Terrain.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Bike.tscn" id="3"]
[ext_resource type="Script" uid="uid://bs2vskre8rhf3" path="res://Scripts/ScoreSystem.gd" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/UI/GameHUD.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/UI/GameOver.tscn" id="6"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_left = -500.0
offset_top = -500.0
offset_right = 5000.0
offset_bottom = 1500.0
color = Color(0.05, 0.05, 0.2, 1)

[node name="Terrain" parent="." instance=ExtResource("2")]

[node name="Bike" parent="." instance=ExtResource("3")]
position = Vector2(150, 350)

[node name="ScoreSystem" type="Node" parent="."]
script = ExtResource("4")

[node name="GameHUD" parent="." instance=ExtResource("5")]

[node name="GameOver" parent="." instance=ExtResource("6")]
